--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -34,9 +34,10 @@ Thanks for being a part of Helium.
 ### Mine $HNT
 
 - What is a Helium Miner?
-- Prebuilt Helium Miners
-- Build Your Own Helium Miner
+- Prebuilt Hotspots
+- Build a Gateway
 - Convert a LoRaWAN Gateway
+- Run a Miner
 
 ### Use the Helium Network
 
