--- a/docs/mine-hnt/run-a-miner/run-a-miner.mdx
+++ b/docs/mine-hnt/run-a-miner/run-a-miner.mdx
@@ -1,8 +1,8 @@
 ---
-id: build-a-gateway
+id: run-a-miner
 hide_title: true
-sidebar_label: Build a Gateway
-slug: /mine-hnt/build-a-gateway
+sidebar_label: Run a Miner
+slug: /mine-hnt/run-a-miner
 ---
 
-## Build a Gateway
+## Run a Miner
