--- a/docs/mine-hnt/mine-hnt.mdx
+++ b/docs/mine-hnt/mine-hnt.mdx
@@ -30,3 +30,13 @@ Servers (ie: the servers that "own" the devices on the network).
 The mechanics of mining and earnings on the Network are more fully covered in
 [other sections](blockchain/mining). This section focuses on practical hardware
 and software requirements for operating a Miner.
+
+We will cover everything from [prebuilt Hotspots](mine-hnt/prebuilt-hotspots),
+generic LoRaWAN gateways which require running your own Miner, to building your
+own gateway using a Raspberry Pi.
+
+**Note**: The ability to mine HNT with anything other than prebuilt Hotspots is
+currently under development following the conclusion of the DIY Alpha program.
+Please join the Helium Discord Server and the #hotspot-diy-hardware channel for
+the latest updates on the roadmap here. To be a Helium Miner, there are three
+principle components to know about
