first console content

--- a/docs/use-the-network/console/console.mdx
+++ b/docs/use-the-network/console/console.mdx
@@ -6,3 +6,16 @@ slug: /use-the-network/console
 ---
 
 ## Helium Console
+ 
+The [Helium Console](http://console.helium.com/) is a web-based device management tool that allows developers to register, authenticate, and manage their devices on the Helium network. In addition to device management, Console provides prebuilt connections called Integrations to route device data via HTTPs or MQTT; or directly to cloud services like AWS IoT.
+
+Device Management includes:
+
+* Organization structure with labels, and user-level permissions
+* Device ID registration and seamless, secure onboarding and authentication
+* Data Credits for utilizing the Helium Network
+
+Console is available as a free to use hosted application at [console.helium.com](https://console.helium.com).
+
+
+[Console Quickstart](/docs/use-the-network/console/quickstart)
