add user management doc

--- a/docs/use-the-network/console/console.mdx
+++ b/docs/use-the-network/console/console.mdx
@@ -19,3 +19,5 @@ Console is available as a free to use hosted application at [console.helium.com]
 
 
 [Console Quickstart](/docs/use-the-network/console/quickstart)
+
+[User Managment](/docs/use-the-network/console/users)
