add device content

--- a/docs/use-the-network/console/console.mdx
+++ b/docs/use-the-network/console/console.mdx
@@ -5,7 +5,7 @@ sidebar_label: Helium Console
 slug: /use-the-network/console
 ---
 
-## Helium Console
+# Helium Console
  
 The [Helium Console](http://console.helium.com/) is a web-based device management tool that allows developers to register, authenticate, and manage their devices on the Helium network. In addition to device management, Console provides prebuilt connections called Integrations to route device data via HTTPs or MQTT; or directly to cloud services like AWS IoT.
 
@@ -21,3 +21,5 @@ Console is available as a free to use hosted application at [console.helium.com]
 [Console Quickstart](/docs/use-the-network/console/quickstart)
 
 [User Managment](/docs/use-the-network/console/users)
+
+[Adding Devices](/docs/use-the-network/console/adding-devices)
