--- a/docs/use-the-network/console/console.mdx
+++ b/docs/use-the-network/console/console.mdx
@@ -23,3 +23,5 @@ Console is available as a free to use hosted application at [console.helium.com]
 [User Managment](/docs/use-the-network/console/users)
 
 [Adding Devices](/docs/use-the-network/console/adding-devices)
+
+[Labels](/docs/use-the-network/console/labels)
