add debug content

--- a/docs/use-the-network/console/console.mdx
+++ b/docs/use-the-network/console/console.mdx
@@ -25,3 +25,5 @@ Console is available as a free to use hosted application at [console.helium.com]
 [Adding Devices](/docs/use-the-network/console/adding-devices)
 
 [Labels](/docs/use-the-network/console/labels)
+
+[Debug](/docs/use-the-network/console/debug)
