add functions docs

--- a/docs/use-the-network/console/console.mdx
+++ b/docs/use-the-network/console/console.mdx
@@ -27,3 +27,5 @@ Console is available as a free to use hosted application at [console.helium.com]
 [Labels](/docs/use-the-network/console/labels)
 
 [Debug](/docs/use-the-network/console/debug)
+
+[Functions](/docs/use-the-network/console/functions)
