add console integration http doc

--- a/docs/use-the-network/console/console.mdx
+++ b/docs/use-the-network/console/console.mdx
@@ -29,3 +29,5 @@ Console is available as a free to use hosted application at [console.helium.com]
 [Debug](/docs/use-the-network/console/debug)
 
 [Functions](/docs/use-the-network/console/functions)
+
+[Integrations](/docs/use-the-network/console/integrations)
