add console integration aws iot core doc

--- a/docs/use-the-network/console/integrations/integrations.mdx
+++ b/docs/use-the-network/console/integrations/integrations.mdx
@@ -27,3 +27,7 @@ Devices are connected to integrations through the use of Labels. Labels are name
 
 [HTTP](/docs/use-the-network/console/integrations/http)
 
+[MQTT](/docs/use-the-network/console/integrations/mqtt)
+
+[AWS IoT Core](/docs/use-the-network/console/integrations/aws-iot-core)
+
