add console integration cargo doc

--- a/docs/use-the-network/console/integrations/integrations.mdx
+++ b/docs/use-the-network/console/integrations/integrations.mdx
@@ -31,3 +31,5 @@ Devices are connected to integrations through the use of Labels. Labels are name
 
 [AWS IoT Core](/docs/use-the-network/console/integrations/aws-iot-core)
 
+[Cargo](/docs/use-the-network/console/integrations/cargo)
+
