add console integration mydevices cayenne doc

--- a/docs/use-the-network/console/integrations/integrations.mdx
+++ b/docs/use-the-network/console/integrations/integrations.mdx
@@ -33,3 +33,5 @@ Devices are connected to integrations through the use of Labels. Labels are name
 
 [Cargo](/docs/use-the-network/console/integrations/cargo)
 
+[MyDevices Cayenne](/docs/use-the-network/console/integrations/mydevices-cayenne)
+
