add integrations json and adafruitio doc

--- a/docs/use-the-network/console/integrations/integrations.mdx
+++ b/docs/use-the-network/console/integrations/integrations.mdx
@@ -25,6 +25,8 @@ To add a new integration, navigate to the **Integrations** page using the left s
 
 Devices are connected to integrations through the use of Labels. Labels are named identifiers that can be used to associate an integration with a device. To connect one or more devices to one or more integrations, simply attach the same label to both the device and integration. Labels need to be created before attaching them to devices and integrations. \(See more instructions here.\)
 
+[JSON Schema](/docs/use-the-network/console/integrations/json-schema)
+
 [HTTP](/docs/use-the-network/console/integrations/http)
 
 [MQTT](/docs/use-the-network/console/integrations/mqtt)
@@ -34,4 +36,6 @@ Devices are connected to integrations through the use of Labels. Labels are name
 [Cargo](/docs/use-the-network/console/integrations/cargo)
 
 [MyDevices Cayenne](/docs/use-the-network/console/integrations/mydevices-cayenne)
+
+[Adafruit IO](/docs/use-the-network/console/integrations/adafruitio)
 
