--- a/docs/use-the-network/console/integrations/mqtt.mdx
+++ b/docs/use-the-network/console/integrations/mqtt.mdx
@@ -23,7 +23,7 @@ The next step is to paste your MQTT broker endpoint, and optional topic prefix.
 
 ## Connecting Integrations to Devices
 
-Devices are connected to integrations through the use of Labels. Labels are named identifiers, that can be used to associate an integration with a device. To connect one or more devices to one or more integrations, simply attach the same label to both the device and integration. Labels need to be created before attaching them to devices and integrations. Read more on this [here](../labels.md).
+Devices are connected to integrations through the use of Labels. Labels are named identifiers, that can be used to associate an integration with a device. To connect one or more devices to one or more integrations, simply attach the same label to both the device and integration. Labels need to be created before attaching them to devices and integrations. Read more on this [here](../labels).
 
 ## MQTT Topic composition:
 
@@ -43,11 +43,11 @@ Example without prefix: `helium/3c822699-37fd-4df6-a84d-93037a450843/tx`
 
 ## MQTT Messages
 
-The MQTT for downlink and uplink follow the [JSON schema documented here.](json-schema.md)
+The MQTT for downlink and uplink follow the [JSON schema documented here.](json-schema)
 
 ## Connecting Integrations to Devices
 
-Devices are connected to integrations through the use of Labels. Labels are named identifiers, that can be used to associate an integration with a device. To connect one or more devices to one or more integrations, simply attach the same label to both the device and integration. Labels need to be created before attaching them to devices and integrations. Instructions for doing this are [here](https://github.com/helium/devdocs/tree/67b988ec351854ec4b7608e12b5b8f47f2456abf/console/labels/README.md).
+Devices are connected to integrations through the use of Labels. Labels are named identifiers, that can be used to associate an integration with a device. To connect one or more devices to one or more integrations, simply attach the same label to both the device and integration. Labels need to be created before attaching them to devices and integrations. Instructions for doing this are [here](../labels).
 
 ## Send and Receive Device Data
 
