formatting and small fixes

--- a/docs/use-the-network/console/integrations/integrations.mdx
+++ b/docs/use-the-network/console/integrations/integrations.mdx
@@ -5,25 +5,30 @@ sidebar_label: Integrations
 slug: /use-the-network/console/integrations
 ---
 
-import useBaseUrl from "@docusaurus/useBaseUrl"
+import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Integrations
 
-Integrations enable devices to connect to pre-configured, cloud-based applications or send data directly over HTTP or MQTT.
+Integrations enable devices to connect to pre-configured, cloud-based
+applications or send data directly over HTTP or MQTT.
 
 ## Add Integration
 
-To add a new integration, navigate to the **Integrations** page using the left side navigation, and then select from the available integrations as shown below. Follow the specific integration guides below for more details.
+To add a new integration, navigate to the **Integrations** page using the left
+side navigation, and then select from the available integrations as shown below.
+Follow the specific integration guides below for more details.
 
 <img
-  src={useBaseUrl(
-    "img/use-the-network/console/console-integrations-add.png"
-  )}
+  src={useBaseUrl("img/use-the-network/console/console-integrations-add.png")}
 />
 
 ## Connecting Integrations to Devices
 
-Devices are connected to integrations through the use of Labels. Labels are named identifiers that can be used to associate an integration with a device. To connect one or more devices to one or more integrations, simply attach the same label to both the device and integration. Labels need to be created before attaching them to devices and integrations. \(See more instructions here.\)
+Devices are connected to integrations through the use of Labels. Labels are
+named identifiers that can be used to associate an integration with a device. To
+connect one or more devices to one or more integrations, simply attach the same
+label to both the device and integration. Labels need to be created before
+attaching them to devices and integrations. \(See more instructions here.\)
 
 [JSON Schema](/docs/use-the-network/console/integrations/json-schema)
 
@@ -38,4 +43,3 @@ Devices are connected to integrations through the use of Labels. Labels are name
 [MyDevices Cayenne](/docs/use-the-network/console/integrations/mydevices-cayenne)
 
 [Adafruit IO](/docs/use-the-network/console/integrations/adafruitio)
-
