--- a/docs/use-the-network/console/integrations/mqtt.mdx
+++ b/docs/use-the-network/console/integrations/mqtt.mdx
@@ -11,7 +11,8 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 ## Add an MQTT Integration
 
-To add an integration, go to **Integrations** on the left-hand menu. Select the integration to add - in this case, the **MQTT** integration.
+To add an integration, go to **Integrations** on the left-hand menu. Select the
+integration to add - in this case, the **MQTT** integration.
 
 <img
   src={useBaseUrl(
@@ -23,7 +24,11 @@ The next step is to paste your MQTT broker endpoint, and optional topic prefix.
 
 ## Connecting Integrations to Devices
 
-Devices are connected to integrations through the use of Labels. Labels are named identifiers, that can be used to associate an integration with a device. To connect one or more devices to one or more integrations, simply attach the same label to both the device and integration. Labels need to be created before attaching them to devices and integrations. Read more on this [here](../labels).
+Devices are connected to integrations through the use of Labels. Labels are
+named identifiers, that can be used to associate an integration with a device.
+To connect one or more devices to one or more integrations, simply attach the
+same label to both the device and integration. Labels need to be created before
+attaching them to devices and integrations. Read more on this [here](../labels).
 
 ## MQTT Topic composition:
 
@@ -43,15 +48,22 @@ Example without prefix: `helium/3c822699-37fd-4df6-a84d-93037a450843/tx`
 
 ## MQTT Messages
 
-The MQTT for downlink and uplink follow the [JSON schema documented here.](json-schema)
+The MQTT for downlink and uplink follow the
+[JSON schema documented here.](json-schema)
 
 ## Connecting Integrations to Devices
 
-Devices are connected to integrations through the use of Labels. Labels are named identifiers, that can be used to associate an integration with a device. To connect one or more devices to one or more integrations, simply attach the same label to both the device and integration. Labels need to be created before attaching them to devices and integrations. Instructions for doing this are [here](../labels).
+Devices are connected to integrations through the use of Labels. Labels are
+named identifiers, that can be used to associate an integration with a device.
+To connect one or more devices to one or more integrations, simply attach the
+same label to both the device and integration. Labels need to be created before
+attaching them to devices and integrations. Instructions for doing this are
+[here](../labels).
 
 ## Send and Receive Device Data
 
-The following examples are done with the [MQTT CLI](https://hivemq.github.io/mqtt-cli) utility.
+The following examples are done with the
+[MQTT CLI](https://hivemq.github.io/mqtt-cli) utility.
 
 Example MQTT
 
