--- a/docs/use-the-network/console/integrations/aws-iot-core.mdx
+++ b/docs/use-the-network/console/integrations/aws-iot-core.mdx
@@ -9,11 +9,16 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # AWS IoT Core
 
-[AWS IoT Core](https://aws.amazon.com/iot-core/) is a powerful offering that lets developers build device-based applications and services on the AWS Cloud. And this Integration via Helium Console automates the complexity of securely connecting your devices to AWS IoT Core. 
+[AWS IoT Core](https://aws.amazon.com/iot-core/) is a powerful offering that
+lets developers build device-based applications and services on the AWS Cloud.
+And this Integration via Helium Console automates the complexity of securely
+connecting your devices to AWS IoT Core.
 
 ### Add an AWS IoT Core Integration
 
-To add an **AWS IoT Core Integration**, go to **Integrations** on the left-hand menu. Select the integration to add - in this case, the **AWS IoT Core** integration:
+To add an **AWS IoT Core Integration**, go to **Integrations** on the left-hand
+menu. Select the integration to add - in this case, the **AWS IoT Core**
+integration:
 
 <img
   src={useBaseUrl(
@@ -21,11 +26,13 @@ To add an **AWS IoT Core Integration**, go to **Integrations** on the left-hand 
   )}
 />
 
-The next step is to create a new user with limited permissions that this Integration will use.
+The next step is to create a new user with limited permissions that this
+Integration will use.
 
 Open up the [AWS Console](https://console.aws.amazon.com/)
 
-Under the Services menu in the upper-left, go to **Security, Identity, & Compliance**-&gt;**IAM**:
+Under the Services menu in the upper-left, go to **Security, Identity, &
+Compliance**-&gt;**IAM**:
 
 <img
   src={useBaseUrl(
@@ -41,7 +48,8 @@ We are now going to create a new **User:**
   )}
 />
 
-Set the user name to "**HeliumIntegrationAccess**" and select only "**Programmatic access**"
+Set the user name to "**HeliumIntegrationAccess**" and select only
+"**Programmatic access**"
 
 <img
   src={useBaseUrl(
@@ -49,9 +57,11 @@ Set the user name to "**HeliumIntegrationAccess**" and select only "**Programmat
   )}
 />
 
-We now attach a policy to the newly created user that defines what permissions they hold.
+We now attach a policy to the newly created user that defines what permissions
+they hold.
 
-Select "**Attach existing policies directly**" and type "**AWSIoTConfigAccess"** into the "**Filter Policies**" box and check the box to the left of the row:
+Select "**Attach existing policies directly**" and type "**AWSIoTConfigAccess"**
+into the "**Filter Policies**" box and check the box to the left of the row:
 
 <img
   src={useBaseUrl(
@@ -65,11 +75,14 @@ Select "**Attach existing policies directly**" and type "**AWSIoTConfigAccess"**
   )}
 />
 
-:::warning
-Ensure you record and store these keys securely, as you will not have an opportunity to get access to them again!
+:::warning 
+Ensure you record and store these keys securely, as you will not have
+an opportunity to get access to them again! 
 :::
 
-Back in the **Helium Console**, enter the credentials we just created under **AWS Connection Details,** as well as the AWS region that you would like AWS IoT to run in.
+Back in the **Helium Console**, enter the credentials we just created under
+**AWS Connection Details,** as well as the AWS region that you would like AWS
+IoT to run in.
 
 <img
   src={useBaseUrl(
@@ -77,7 +90,8 @@ Back in the **Helium Console**, enter the credentials we just created under **AW
   )}
 />
 
-The **Topic** field is the AWS IoT MQTT topic that this integration will publish uplink messages to, from devices.
+The **Topic** field is the AWS IoT MQTT topic that this integration will publish
+uplink messages to, from devices.
 
 Finally, we give our new Integration a name:
 
@@ -87,17 +101,23 @@ Finally, we give our new Integration a name:
   )}
 />
 
-And click **Create Integration**. Your new Integration is now ready for use. 
+And click **Create Integration**. Your new Integration is now ready for use.
 
 ### Connecting Integrations to Devices
 
-Devices are connected to integrations through the use of Labels. Labels are named identifiers, that can be used to associate an integration with a device. To connect one or more devices to one or more integrations, simply attach the same label to both the device and integration. Labels need to be created before attaching them to devices and integrations. You can read more about how to do that [here](https://developer.helium.com/console/labels).
+Devices are connected to integrations through the use of Labels. Labels are
+named identifiers, that can be used to associate an integration with a device.
+To connect one or more devices to one or more integrations, simply attach the
+same label to both the device and integration. Labels need to be created before
+attaching them to devices and integrations. You can read more about how to do
+that [here](https://developer.helium.com/console/labels).
 
 ## AWS IoT MQTT Topic composition:
 
 ### Device Uplink \(Receive Data from Device\)
 
-This topic is defined in the **Topic** field when creating the AWS IoT intgeration.
+This topic is defined in the **Topic** field when creating the AWS IoT
+intgeration.
 
 **Subscribe to:** `{custom_topic}`
 
@@ -109,7 +129,8 @@ Example: `helium/devices/4f10d99a-e22e-4007-a3f0-6af3bc63acfe/down`
 
 ## AWS IoT MQTT Messages
 
-To send data to a device, use JSON with a `payload_raw` field with a base64 encoded string.  
+To send data to a device, use JSON with a `payload_raw` field with a base64
+encoded string.  
 **Sending Data to Device \(Downlink\):**
 
 ```javascript
@@ -118,7 +139,9 @@ To send data to a device, use JSON with a `payload_raw` field with a base64 enco
 }
 ```
 
-When receiving data from a device, the messages will be in JSON and look like the following. The data from the device is in the `payload` field, and is a base64 encoded string.  
+When receiving data from a device, the messages will be in JSON and look like
+the following. The data from the device is in the `payload` field, and is a
+base64 encoded string.  
 **Receiving data from Device \(Uplink\):**
 
 ```javascript
@@ -168,7 +191,9 @@ When receiving data from a device, the messages will be in JSON and look like th
 
 ### Viewing Integration in AWS IoT Core
 
-Once a label has been set up to connect our devices to our new Integration, let's return to the [AWS Console](https://console.aws.amazon.com/), and go to **IoT Core** under the **Services** menu:
+Once a label has been set up to connect our devices to our new Integration,
+let's return to the [AWS Console](https://console.aws.amazon.com/), and go to
+**IoT Core** under the **Services** menu:
 
 <img
   src={useBaseUrl(
@@ -184,7 +209,8 @@ Here you are able to monitor the connections to AWS:
   )}
 />
 
-When data comes in from the Helium Network Integration, Things will be automatically created within AWS IoT Core:
+When data comes in from the Helium Network Integration, Things will be
+automatically created within AWS IoT Core:
 
 <img
   src={useBaseUrl(
@@ -192,7 +218,8 @@ When data comes in from the Helium Network Integration, Things will be automatic
   )}
 />
 
-Going to **Interact** on the left while on a **Thing** takes us to a list of topics for interacting with the **Thing Shadows**:
+Going to **Interact** on the left while on a **Thing** takes us to a list of
+topics for interacting with the **Thing Shadows**:
 
 <img
   src={useBaseUrl(
@@ -206,7 +233,10 @@ Going to **Interact** on the left while on a **Thing** takes us to a list of top
   )}
 />
 
-To monitor in real-time what is being sent to AWS from Helium, we can open the **MQTT monitor**, and subscribe to a topic with "\#" wildcard \(to catch all messages, or use the topic we set in **Helium Console** if just wanting to monitor those\).
+To monitor in real-time what is being sent to AWS from Helium, we can open the
+**MQTT monitor**, and subscribe to a topic with "\#" wildcard \(to catch all
+messages, or use the topic we set in **Helium Console** if just wanting to
+monitor those\).
 
 <img
   src={useBaseUrl(
@@ -220,16 +250,20 @@ To monitor in real-time what is being sent to AWS from Helium, we can open the *
   )}
 />
 
-The payload field is the actual data received from the device, [encoded in a base64](https://www.base64decode.org/) string.
+The payload field is the actual data received from the device,
+[encoded in a base64](https://www.base64decode.org/) string.
 
 ### Integration Details
 
 View the details of your integration by clicking on the Integration name.
 
-**Integration Details** shows the integration ID that is unique to each integration, the name, the type of integration, and whether it is active or not.
+**Integration Details** shows the integration ID that is unique to each
+integration, the name, the type of integration, and whether it is active or not.
 
-**Devices Piped** lists all the devices that are currently sending their data to the selected integration.
+**Devices Piped** lists all the devices that are currently sending their data to
+the selected integration.
 
-**Update your AWS Connection Details** allows you to update your AWS connection details for the currently viewed integration.
+**Update your AWS Connection Details** allows you to update your AWS connection
+details for the currently viewed integration.
 
-### 
+###
