--- a/docs/use-the-network/console/users.mdx
+++ b/docs/use-the-network/console/users.mdx
@@ -9,36 +9,35 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Users
 
-
 ## User Roles
 
-The first user to register a new organization is given the highest role of administrator. To add a new user, navigate to the **Users** page using the left side navigation, and then click **+ Add User** in the upper right. You will be presented with the screen below. You will find more details about the access that each role has further below.
+The first user to register a new organization is given the highest role of
+administrator. To add a new user, navigate to the **Users** page using the left
+side navigation, and then click **+ Add User** in the upper right. You will be
+presented with the screen below. You will find more details about the access
+that each role has further below.
 
-<img
-  src={useBaseUrl(
-    "img/use-the-network/console/console-new-user.png"
-  )}
-/>
+<img src={useBaseUrl("img/use-the-network/console/console-new-user.png")} />
 
 ### User Role Details
 
-* Administrator
-  * Manage Devices
-  * Manage Labels
-  * Manage Data Credits
-  * Manage Users
-* Manager
-  * Manage Devices
-  * Manage Labels
-* Read-Only
-  * View Devices
+- Administrator
+  - Manage Devices
+  - Manage Labels
+  - Manage Data Credits
+  - Manage Users
+- Manager
+  - Manage Devices
+  - Manage Labels
+- Read-Only
+  - View Devices
 
 ## Organizations
 
-An Organization is created when registering an account. You can add additional Organizations by navigating to the **Dashboard** page using the left side navigation, and then click **+ Add Organization** in the upper right. To switch to another Organization click the **Switch** button on the list of Organizations on the **Dashboard** page.
+An Organization is created when registering an account. You can add additional
+Organizations by navigating to the **Dashboard** page using the left side
+navigation, and then click **+ Add Organization** in the upper right. To switch
+to another Organization click the **Switch** button on the list of Organizations
+on the **Dashboard** page.
 
-<img
-  src={useBaseUrl(
-    "img/use-the-network/console/console-new-org.png"
-  )}
-/>
+<img src={useBaseUrl("img/use-the-network/console/console-new-org.png")} />
