updating open source

--- a/docs/community-governance/community-governance.mdx
+++ b/docs/community-governance/community-governance.mdx
@@ -1,7 +1,7 @@
 ---
 id: community-governance
 hide_title: true
-sidebar_label: Introduction
+sidebar_label: Community
 slug: /community-governance
 ---
 
@@ -14,7 +14,7 @@ The Helium Community is the home to over tens of thousands developers and networ
 
 The [Helium Discord](https://discord.gg/helium) is the primary communication channel for the Helium Network Community. Here you'll find real-time, in-depth discussion on all parts of the Helium Network. It is also the primary venue to get support for using the Network. 
 
-* Join the [Helium Community Discord](https://discord.gg/helium)
+* [Join the Helium Community Discord](https://discord.gg/helium)
 
 ### Helium Improvement Proposals
 
