updates to oss and community

--- a/docs/open-source/open-source.mdx
+++ b/docs/open-source/open-source.mdx
@@ -37,6 +37,20 @@ things here are written in Erlang.
 
 - [Erlang libp2p](https://github.com/helium/erlang-libp2p) - Libp2p swarms
   written in (you guessed it) Erlang.
+  
+- [Helium CLI Wallet](https://github.com/helium/helium-wallet-rs) - Command Line
+  Interface, written in Rust, used to created and administer Helium wallets, and
+  interact with the Helium Network.  
+  
+- [Helium JS](https://github.com/helium/helium-js) - Typescript SDKs for
+  interacting with the Helium blockchain.
+   
+-  [Packet Purchaser](https://github.com/helium/packet-purchaser) - Service that buys 
+   Helium LoRaWAN packets from the Network and delivers the them to a target LoRaWAN Network server.
+   
+- [Angry Purple Tiger](https://github.com/helium/angry-purple-tiger) - Ever
+  wonder how your Miner got its cute little animal name? Here it is.
+
 
 ### LoRaWAN
 
@@ -45,10 +59,16 @@ some of the code that makes it possible.
 
 - [Packet Forwarder](https://github.com/helium/packet_forwarder) - Helium's fork
   of the Lora packet forwarder.
+  
+- [Light Gateway](https://github.com/helium/gateway-rs) - The next-generation packet 
+  forwarder for the Helium-enabled gateways.
 
 - [Helium Router](#) - #SOON
 
 - [Helium Console](#) - #SOON
+
+- [Console Decoders](https://github.com/helium/console-decoders) - A collection
+  of LoRaWAN sensor decoders used in Helium Console.
 
 ### Mobile Apps, Web Apps, and Sites
 
@@ -59,18 +79,3 @@ some of the code that makes it possible.
 
 - [Helium Docs](https://github.com/helium/docs) - Docusaurus-based docs for all
   things Helium. (You're reading them.)
-
-### Other Repos of Note
-
-- [Angry Purple Tiger](https://github.com/helium/angry-purple-tiger) - Ever
-  wonder how your Miner got its cute little animal name? Here it is.
-
-- [Helium CLI Wallet](https://github.com/helium/helium-wallet-rs) - Command Line
-  Interface, written in Rust, used to created and administer Helium wallets, and
-  interact with the Helium Network.
-
-- [Helium JS](https://github.com/helium/helium-js) - Typescript SDKs for
-  interacting with the Helium blockchain.
-
-- [Console Decoders](https://github.com/helium/console-decoders) - A collection
-  of LoRaWAN sensor decoders used in Helium Console.
