--- a/docs/community-governance/community-governance.mdx
+++ b/docs/community-governance/community-governance.mdx
@@ -1,8 +1,52 @@
 ---
 id: community-governance
 hide_title: true
-sidebar_label: Introduction
+sidebar_label: Community
 slug: /community-governance
 ---
 
-## Helium Community and Governance
+## Community and Governance
+
+The Helium Community is the home to over tens of thousands developers and network operators who collaborate every day across the world to build the Helium Network. Any and all are welcome to take part. Join us!
+
+
+### Discord
+
+The [Helium Discord](https://discord.gg/helium) is the primary communication channel for the Helium Network Community. Here you'll find real-time, in-depth discussion on all parts of the Helium Network. It is also the primary venue to get support for using the Network. 
+
+* [Join the Helium Community Discord](https://discord.gg/helium)
+
+### Helium Improvement Proposals
+
+The Helium Community uses a governance mechanism called **Helium Improvement Proposals** (known as "HIPs"). Modeled on BIPs from the Bitcoin community, HIPs are used to introduce, debate, and approve/reject new changes to major elements of the Network like the core blockchain, $HNT token economics, and Network governance itself. 
+
+HIPs are managed entirely from the [HIP GitHub repository](https://github.com/helium/HIP). HIP discussion also happens in the `Improvement Proposal` section of [Helium Discord](https://discord.gg/helium).  Any and all members of the Helium Community are encouraged to create HIPs, and participate in the governance process. 
+
+* [HIP Repo on GitHub](https://github.com/helium/HIP)
+
+### Regularly Community Events
+
+#### Monthly Community Calls
+
+The Helium Community holds monthly video calls (led by the [DEWI](https://www.dewi.org/)). These typically happen on the the **4th Wednesday of each month at 12PM ET**. Each call has an open agenda, and any community member can join and add items to the agenda to be discussed. 
+
+* [Community Call Notes and Agenda](https://docs.google.com/document/d/1bMm2alBigBj3detA775Dn0Gz9UM5XczAeK9vnjBB3l0/edit#)
+* [Video recordings of all previous community calls](https://vimeo.com/dewialliances)
+
+
+#### Helium Hacks Happy Hour
+
+Held most weeks on Wednesdays at 3PM Pacific on Zoom, Helium Hacks Happy Hour (4H) is covers all things hardware, sensors, and connectivity. If you're building something on the Network and want to share, or simply want to learn, 4H is for you. 
+
+* [Register for Helium Hacks Happy Hour](https://zoom.us/meeting/register/tJ0qdeyorDgqHdbWZTQhBSphsFEytiyc5BiP) 
+
+### Social Media 
+
+Helium is everywhere. Here's the full list:
+
+* [Twitter](https://twitter.com/helium)
+* [Telegram](https://t.me/helium_network) 
+* [Reddit](https://www.reddit.com/r/HeliumNetwork/)
+* [LinkedIn](https://www.linkedin.com/company/heliuminc/)
+* [Facebook](https://www.facebook.com/heliumsystems)
+* [Instagram](https://www.instagram.com/join.helium/)
