moving coverage mapping over to Use, deleting old dir

--- a/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
+++ b/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
@@ -2,5 +2,8 @@
 id: coverage-mapping
 hide_title: true
 sidebar_label: Coverage Mapping
-slug: /coverage-mapping
+slug: /use-the-network/coverage-mapping
 ---
+
+## Coverage Mapping
+
