add migrating devices docs

--- a/docs/use-the-network/console/console.mdx
+++ b/docs/use-the-network/console/console.mdx
@@ -28,6 +28,8 @@ Console is available as a free to use hosted application at
 
 [Adding Devices](/docs/use-the-network/console/adding-devices)
 
+[Migrating Devices](/docs/use-the-network/console/migrating-devices)
+
 [Labels](/docs/use-the-network/console/labels)
 
 [Debug](/docs/use-the-network/console/debug)
