add console api and cli docs

--- a/docs/use-the-network/console/console.mdx
+++ b/docs/use-the-network/console/console.mdx
@@ -37,3 +37,7 @@ Console is available as a free to use hosted application at
 [Functions](/docs/use-the-network/console/functions)
 
 [Integrations](/docs/use-the-network/console/integrations)
+
+[CLI](/docs/use-the-network/console/cli)
+
+[API](/docs/use-the-network/console/api)
