--- a/docs/use-the-network/console/functions.mdx
+++ b/docs/use-the-network/console/functions.mdx
@@ -38,7 +38,7 @@ These types of standards allow you to easily encode your data much more
 efficiently. Once your data has been received over the air by the network, there
 is no longer the necessity of encoding the data with a standard that can make it
 more challenging for humans to interpret. This is where Function Decoders come
-in, they allow you to decode your device data so that you can interpret it for
+in. They allow you to decode your device data so that you can interpret it for
 debugging issues or translate it before sending it to your application or
 another service.
 
