--- a/docs/use-the-network/coverage-mapping/mappers-data.mdx
+++ b/docs/use-the-network/coverage-mapping/mappers-data.mdx
@@ -9,7 +9,9 @@ slug: /use-the-network/coverage-mapping/mappers-data
 
 ## Data
 
-All data collected for this effort is publicly available. A full database CSV dump is updated daily for download below. Each hotspot that heard an uplink is referenced by _uplink\_id_ in the hotspots table. 
+All data collected for this effort is publicly available. A full database CSV
+dump is updated daily for download below. Each hotspot that heard an uplink is
+referenced by _uplink_id_ in the hotspots table.
 
 [uplinks.csv](https://coverage-dumps.s3-us-west-2.amazonaws.com/daily-csv-dumps/uplinks.csv)
 
@@ -50,5 +52,3 @@ timestamp: time uplink was received
 channel: uplink channel
 status: uplink status
 ```
-
-
