--- a/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
+++ b/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
@@ -5,7 +5,7 @@ sidebar_label: Coverage Mapping
 slug: /use-the-network/coverage-mapping
 ---
 
-## Coverage Mapping
+# Coverage Mapping
 
 Helium recently began an effort to collect device data for the purpose of
 coverage mapping from voluntary community contributors. Mapping data is viewable
@@ -14,3 +14,9 @@ this project by sending device uplinks with the required geographical data to
 the [Mappers API](mappers-api). For a step by step guide on setting an
 integration in Console see the
 [Mappers Quickstart](/docs/use-the-network/coverage-mapping/mappers-quickstart).
+
+[Mappers API](/docs/use-the-network/coverage-mapping/mappers-api).
+
+[Mappers Data](/docs/use-the-network/coverage-mapping/mappers-data).
+
+[Adeunis Mapper Instructions](/docs/use-the-network/coverage-mapping/adeunis-mapper).
