--- a/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
+++ b/docs/use-the-network/coverage-mapping/coverage-mapping.mdx
@@ -11,7 +11,7 @@ Helium recently began an effort to collect device data for the purpose of
 coverage mapping from voluntary community contributors. Mapping data is viewable
 at [mappers.helium.com](https://mappers.helium.com/). Anyone can contribute to
 this project by sending device uplinks with the required geographical data to
-the [Mappers API](mappers-api). For a step by step guide on setting an
+the [Mappers API](/docs/use-the-network/coverage-mapping/mappers-api). For a step by step guide on setting an
 integration in Console see the
 [Mappers Quickstart](/docs/use-the-network/coverage-mapping/mappers-quickstart).
 
